- Memory reader now respects the iobase value of the reader struct.
  (doesn't change normal behavior, but may help with new features.)
- Updated simpleplayMEM example application.
- Fix return types for MREADER->Seek and MWRITER->Put to be int, and
  not BOOL. (identical functionality but non-misleading.)
- Documentation fixes with relation to free()/MikMod_free().
- Provided new Visual Studio 6 and Visual Studio 2005 project files.
  The latter imports into newer Visual Studio versions, e.g. VS2012.
- Fixed some driver version signatures which I missed changing in the
  previous release. (cosmetic change.)


Summary of changes between libmikmod 3.2.0 and libmikmod 3.3.2 ():
==========================================================================

libmikmod 3.3.2 was released on 05-Oct-2013.

This is a serious bug fix release after the previous 3.2.0 series, with
some additional new features. All who are using libmikmod-3.2.0 (or the
interim 3.3.1-beta) must upgrade to the new libmikmod-3.3.2 version.

THANKS

- Paul Spark <sparkynz74@gmail.com> for Microsoft Visual C 6.0 fixes.
- Ozkan Sezer: many changes.

NEW FEATURES

- New CMake build system.
- Updated configury, support for cross-compilation, support for building
  in a separate directory, support latest autotools.
- New SDL driver - works both with SDL-1.2.x and with SDL2, supports
  floating point output if compiled against SDL2.
- New OpenAL driver, originally suggested by 'kervala', with fixes and
  updates and with floating point output support.
- The multi-platform SDL and OpenAL drivers, if they are compiled, have
  priority over OS-specific hw drivers for MikMod_RegisterAllDrivers().
- New windows xaudio2 driver, originally suggested by 'honza.c', with
  updates, xaudio2.8 support and with floating point output support.
- ALSA driver now supports only the contemporary ALSA 1.0.x versions.
  All of the ancient ALSA 0.3.x-0.4.x code were removed.