@@ -111,7 +111,7 @@ SET (ENABLE_SDL 0 CACHE BOOL "Include the SDL driver")
 SET (ENABLE_STDOUT 1 CACHE BOOL "Support for output to stdout")
 SET (ENABLE_PIPE 1 CACHE BOOL "Support for output via a pipe to another command")
 SET (ENABLE_DL 0 CACHE BOOL "Load ALSA and Ultra Drivers at Runtime")
-SET (ENABLE_SIMD 0 CACHE BOOL "Use SIMD (AltiVec or SSE2) optimizations")
+SET (ENABLE_SIMD 0 CACHE BOOL "Use SIMD (AltiVec or SSE2) optimizations (Unstable!)")
 SET (ENABLE_THREADS 1 CACHE BOOL "build a thread-safe version of libmikmod")
 SET (ENABLE_RPATH "1" CACHE BOOL "Whether to use an rpath when linking" )
 SET (ENABLE_STATIC "1" CACHE BOOL "Whether to build the static library (which takes more time)" )
